--- a/psk_fitness/psk_fitness/Components/Topics/Topics.razor
+++ b/psk_fitness/psk_fitness/Components/Topics/Topics.razor
@@ -41,7 +41,9 @@
                         <label for="email">User Email:</label>
                         <InputText @bind-Value="addFriendModel!.Email" id="email" />
                     </div>
-
+                    <div class="@textClass">
+                        @displayText
+                    </div>
                     <button type="submit" class="btn btn-primary">Add Friend</button>
                 </form>
             }
@@ -209,6 +211,8 @@ else
     private ApplicationUser user;
 
     private AddFriendModel addFriendModel;
+    private string displayText = "";
+    private string textClass = "d-none";
 
     private List<int> accessableTopicIdsToDisplay;
 
@@ -235,11 +239,13 @@ else
         try
         {
             var response = await TopicFriendService.AddTopicFriend(addFriendModel.TopicId, addFriendModel.Email);
-            Console.WriteLine("Friend added successfully!");
+            displayText = "Friend added.";
+            textClass = "text-dark bg-success border border-dark p-3";
         }
         catch (Exception ex)
         {
-            Console.WriteLine($"Error: {ex.Message}");
+            displayText = ex.Message;
+            textClass = "text-dark bg-danger border border-dark p-3";
         }
     }
 
